--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -5,6 +5,7 @@ on:
     inputs:
       app_name:
         required: true
+        type: string
       build_args:
         required: false
         type: string
