--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -124,101 +124,101 @@ jobs:
             syd.ocir.io/coexservices01/alpine/helm:3.9.0 \
             template -f /apps/k8s/values/values.prod.yaml --set "version=${{ github.run_number }}" /apps/k8s/ --debug
 
-  validate-terraform:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+#  validate-terraform:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Project Step Calculator
+#        run: |
+#          echo "HAS_IAM_DIR=$( [ -d ./iam ] && echo true || echo false )" >> $GITHUB_ENV
+#          echo "HAS_INFRA_DIR=$( [ -d ./infra ] && echo true || echo false )" >> $GITHUB_ENV
+#
+#      - name: "Validate iam terraform"
+#        if: env.HAS_IAM_DIR == 'true'
+#        run: |
+#          cd iam
+#          terraform init -backend=false
+#          terraform validate
+#          cd ../..
+#
+#      - name: "Validate infra terraform"
+#        if: env.HAS_INFRA_DIR == 'true'
+#        run: |
+#          cd infra
+#          terraform init -backend=false
+#          terraform validate
+#          cd ../..
 
-      - name: Project Step Calculator
-        run: |
-          echo "HAS_IAM_DIR=$( [ -d ./iam ] && echo true || echo false )" >> $GITHUB_ENV
-          echo "HAS_INFRA_DIR=$( [ -d ./infra ] && echo true || echo false )" >> $GITHUB_ENV
-
-      - name: "Validate iam terraform"
-        if: env.HAS_IAM_DIR == 'true'
-        run: |
-          cd iam
-          terraform init -backend=false
-          terraform validate
-          cd ../..
-
-      - name: "Validate infra terraform"
-        if: env.HAS_INFRA_DIR == 'true'
-        run: |
-          cd infra
-          terraform init -backend=false
-          terraform validate
-          cd ../..
-
-  build-and-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Project Step Calculator
-        run: |
-          echo "HAS_GRADLE=$( [ -f build.gradle ] && echo true || echo false )" >> $GITHUB_ENV
-          echo "HAS_MAVEN=$( [ -f pom.xml ] && echo true || echo false )" >> $GITHUB_ENV
-
-      - name: Set up JDK ${{ inputs.java_version }}
-        if: env.HAS_GRADLE == 'true'
-        uses: actions/setup-java@v3
-        with:
-          java-version: '${{ inputs.java_version }}'
-          distribution: 'temurin'
-
-      - name: 'Setup github packages gradle settings file'
-        if: env.HAS_GRADLE == 'true'
-        run: |
-          mkdir -p $HOME/.gradle
-          echo "allprojects { repositories { mavenCentral(); maven { name \"GitHubPackages\"; url uri(\"https://maven.pkg.github.com/coexservices/*\"); credentials { username githubRepoActor; password githubRepoToken } } } }" > ~/.gradle/init.gradle
-          echo "githubRepoActor=${{ secrets.CES_GITHUB_PACKAGES_READ_ACTOR }}" > ~/.gradle/gradle.properties
-          echo "githubRepoToken=${{ secrets.CES_GITHUB_PACKAGES_READ_TOKEN }}" >> ~/.gradle/gradle.properties
-
-      - name: Setup Gradle
-        if: env.HAS_GRADLE == 'true'
-        uses: gradle/gradle-build-action@v2
-
-      - name: "Build with Gradle | version: ${{ github.run_number }}"
-        if: env.HAS_GRADLE == 'true'
-        run: |
-          ./gradlew clean build -Pversion=${{github.run_number}} ${{ inputs.build_args }}
-        env:
-          GITHUB_USERNAME: ${{ secrets.CES_GITHUB_PACKAGES_READ_ACTOR }}
-          GITHUB_PASSWORD: ${{ secrets.CES_GITHUB_PACKAGES_READ_TOKEN }}
-
-      - name: Publish JUnit Test Report
-        uses: mikepenz/action-junit-report@v3
-        if: env.HAS_GRADLE == 'true' && always() # always run even if the previous step fails
-        with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'
-
-      - name: Set up JDK ${{ inputs.java_version }}
-        if: env.HAS_MAVEN == 'true'
-        uses: actions/setup-java@v3
-        with:
-          java-version: '${{ inputs.java_version }}'
-          distribution: 'temurin'
-          cache: maven
-
-      - name: 'Setup github packages maven settings file'
-        if: env.HAS_MAVEN == 'true'
-        uses: whelk-io/maven-settings-xml-action@v21
-        with:
-          repositories: '[ { "id": "github", "url": "https://maven.pkg.github.com/coexservices/*" } ]'
-          servers: '[ { "id": "github", "username": "${GITHUB_ACTOR}", "password": "${GITHUB_TOKEN}" } ]'
-
-      - name: "Build with Maven | version: ${{ github.run_number }}"
-        if: env.HAS_MAVEN == 'true'
-        run: |
-          mvn --batch-mode versions:set -DnewVersion=${{ github.run_number }}
-          mvn --batch-mode clean install ${{ inputs.build_args }}
-        env:
-          GITHUB_ACTOR: ${{ secrets.CES_GITHUB_PACKAGES_READ_ACTOR }}
-          GITHUB_TOKEN: ${{ secrets.CES_GITHUB_PACKAGES_READ_TOKEN }}
-
-      - name: Publish JUnit Test Report
-        uses: mikepenz/action-junit-report@v3
-        if: env.HAS_MAVEN == 'true' && always() # always run even if the previous step fails
-        with:
-          report_paths: '**/target/surefire-reports/TEST-*.xml'
+#  build-and-test:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#
+#      - name: Project Step Calculator
+#        run: |
+#          echo "HAS_GRADLE=$( [ -f build.gradle ] && echo true || echo false )" >> $GITHUB_ENV
+#          echo "HAS_MAVEN=$( [ -f pom.xml ] && echo true || echo false )" >> $GITHUB_ENV
+#
+#      - name: Set up JDK ${{ inputs.java_version }}
+#        if: env.HAS_GRADLE == 'true'
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '${{ inputs.java_version }}'
+#          distribution: 'temurin'
+#
+#      - name: 'Setup github packages gradle settings file'
+#        if: env.HAS_GRADLE == 'true'
+#        run: |
+#          mkdir -p $HOME/.gradle
+#          echo "allprojects { repositories { mavenCentral(); maven { name \"GitHubPackages\"; url uri(\"https://maven.pkg.github.com/coexservices/*\"); credentials { username githubRepoActor; password githubRepoToken } } } }" > ~/.gradle/init.gradle
+#          echo "githubRepoActor=${{ secrets.CES_GITHUB_PACKAGES_READ_ACTOR }}" > ~/.gradle/gradle.properties
+#          echo "githubRepoToken=${{ secrets.CES_GITHUB_PACKAGES_READ_TOKEN }}" >> ~/.gradle/gradle.properties
+#
+#      - name: Setup Gradle
+#        if: env.HAS_GRADLE == 'true'
+#        uses: gradle/gradle-build-action@v2
+#
+#      - name: "Build with Gradle | version: ${{ github.run_number }}"
+#        if: env.HAS_GRADLE == 'true'
+#        run: |
+#          ./gradlew clean build -Pversion=${{github.run_number}} ${{ inputs.build_args }}
+#        env:
+#          GITHUB_USERNAME: ${{ secrets.CES_GITHUB_PACKAGES_READ_ACTOR }}
+#          GITHUB_PASSWORD: ${{ secrets.CES_GITHUB_PACKAGES_READ_TOKEN }}
+#
+#      - name: Publish JUnit Test Report
+#        uses: mikepenz/action-junit-report@v3
+#        if: env.HAS_GRADLE == 'true' && always() # always run even if the previous step fails
+#        with:
+#          report_paths: '**/build/test-results/test/TEST-*.xml'
+#
+#      - name: Set up JDK ${{ inputs.java_version }}
+#        if: env.HAS_MAVEN == 'true'
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '${{ inputs.java_version }}'
+#          distribution: 'temurin'
+#          cache: maven
+#
+#      - name: 'Setup github packages maven settings file'
+#        if: env.HAS_MAVEN == 'true'
+#        uses: whelk-io/maven-settings-xml-action@v21
+#        with:
+#          repositories: '[ { "id": "github", "url": "https://maven.pkg.github.com/coexservices/*" } ]'
+#          servers: '[ { "id": "github", "username": "${GITHUB_ACTOR}", "password": "${GITHUB_TOKEN}" } ]'
+#
+#      - name: "Build with Maven | version: ${{ github.run_number }}"
+#        if: env.HAS_MAVEN == 'true'
+#        run: |
+#          mvn --batch-mode versions:set -DnewVersion=${{ github.run_number }}
+#          mvn --batch-mode clean install ${{ inputs.build_args }}
+#        env:
+#          GITHUB_ACTOR: ${{ secrets.CES_GITHUB_PACKAGES_READ_ACTOR }}
+#          GITHUB_TOKEN: ${{ secrets.CES_GITHUB_PACKAGES_READ_TOKEN }}
+#
+#      - name: Publish JUnit Test Report
+#        uses: mikepenz/action-junit-report@v3
+#        if: env.HAS_MAVEN == 'true' && always() # always run even if the previous step fails
+#        with:
+#          report_paths: '**/target/surefire-reports/TEST-*.xml'
