SCRP-1195: Call job validate-pr

--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -111,7 +111,7 @@ jobs:
           terraform validate
           cd ../..
 
-  build-and-test:
+  validate-pr:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
