--- a/.github/workflows/test-mvn.yml
+++ b/.github/workflows/test-mvn.yml
@@ -45,3 +45,9 @@ jobs:
         run: |
           mvn --batch-mode versions:set -DnewVersion=${{ github.run_number }}
           mvn --batch-mode clean install ${{ inputs.build_args }}
+
+      - name: Publish JUnit Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
+        with:
+          report_paths: '**/target/surefire-reports/TEST-*.xml'
